ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
/* ... */
.profile-manager-route {
    margin-top: 5px;
}
.fa.fa-refresh {
    font-size: 21px;
}
.fa.fa-print {
    font-size: 21px;
}
.fa.fa-cog {
    font-size: 21px;
}
.fa.fa-envelope {
    font-size: 21px;
}
.fa.fa-question-circle {
    font-size: 21px;
}
.fa.fa-bell {
    font-size: 21px;
}
.status-tree-grid {
    padding: 5px;
    margin: 5px;
}
.well-sm {
    padding: 0px;
}
.param-value {
    pre {
        overflow-x: scroll;
        white-space: pre-wrap;
    }
}
.global-search {
    width: 400px;
}
.items-per-page {
    width: 100px !important;
    margin-right: 10px;
}
.fa-refresh-animate {
    animation: spin 0.7s infinite linear;
}
.fa-refresh-animate-once {
    animation: spin 0.7s;
}
@keyframes spin {
    from { transform: rotate(0deg);}
    to { transform: rotate(360deg);}
}

.ui-select-placeholder {
    width: auto !important;
}
.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
    vertical-align: middle;
    padding-top: 4px;
    padding-bottom: 4px;
    line-height: 1;
}
.step-state {
    padding-top: 0 !important;
}
.step-state-success {
    color: white;
    display: inline-block;
    min-width: 55px;
    text-align: center;
    background-color: $step-success;
    padding: 3px 10px;
    font-size: 9px;
    border-radius: 5px;
    box-shadow: 0px 1px 0px rgba(0,0,0,.15);
}
.step-state-failure {
    color: white;
    display: inline-block;
    min-width: 55px;
    text-align: center;
    background-color: $step-fail;
    padding: 3px 10px;
    font-size: 9px;
    border-radius: 5px;
    box-shadow: 0px 1px 0px rgba(0,0,0,.15);
}
.step-state-in-progress {
    color: white;
    display: inline-block;
    min-width: 55px;
    text-align: center;
    background-color: $step-in-progress;
    padding: 3px 10px;
    font-size: 9px;
    border-radius: 5px;
    box-shadow: 0px 1px 0px rgba(0,0,0,.15);
}
.pagination {
    margin: 5px 0;
}
.input-group-addon {
padding: 0 12px;
}
.sender-receiver-wrapper {
    input {
        width: 25%;
    }
}
#passwordForm {
    input {
        width: 50%;
    }
}
.file-browser {
    @include container(10px);
    &:focus {
        outline: 0;
    }
}
.file-explorer {
    margin-top: 10px;
    width: 100%;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
}
.file-explorer-nav {
    display: flex;
    flex-direction: row;
    vertical-align: middle;
    width: 100%;
    align-items: center;
}
.file-list-view {
    margin-top: 10px;
    thead, tbody {
        border: 1px solid $border-color;
    }
    .type-name-column {
        display: flex;
        align-items: center;
        .file, .dir {
            margin-right: 5px;
        }
    }
    table {
        table-layout: fixed;
        width: 100%;
        margin-bottom: 5px;
    }
}
.file-view-options {
    display: flex;
    flex-direction: row;
    margin-right: 15px;
}
.files-per-page-pagination-wrapper {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    margin-bottom: 5px;
}
.file-pagination {
    a {
        color: black;
        float: left;
        padding: 6px 12px;
        line-height: 1.428571429;
        text-decoration: none;
        border: 1px solid #e8e8e8;
    }
    a.active {
        background-color: rgba(0,0,0,0.03);
    }

    a:hover:not(.active) {background-color: rgba(0,0,0,0.03);}

}
.nav-refresh-wrapper {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    overflow-x: auto;
}
.dir-path {
    margin-left: 10px;
    vertical-align: middle !important;
}
.card-selected {
    color: rgba(0, 50, 255, .9);
}
.arrow-disabled {
    color: #bcbcbc;
    cursor: auto;
}
.deckgrid {
    margin-top:10px;
    margin-bottom: 5px;
    padding: 15px;
    width: 100%;
    min-height: 100px;
    border-style: solid;
    border-color: #bbb;
    border-width: 1px;
}
.flex-grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
.card {
    background:#fff center 30px no-repeat;
    margin:0 2px 2px 0;
    position:relative;
    display: flex;
    flex-direction: column;
    width: 84px;
    margin: 5px;
    p {
        word-wrap: break-word;
        font-size: 9pt;
        text-align: center;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }
    .file {
        text-align: center;
    }
    .dir {
        text-align: center;
    }
    .file-extension {
        text-align: center;
        position: absolute;
        display: block;
        word-break: break-all;
        width: 30px;
        left: 27px;
        top: 15px;
        font-size: 12px;
        line-height: 1;
    }
}
.advanced-filters {
    position: absolute;
    display: block;
    border-style: solid;
    border-width: 1px;
    border-color: $border-color;
    max-width: 400px;
    max-height:none;
    overflow-y: auto;
    background-color: white;
    padding: 10px;
    z-index: 1000;
    margin-top: 36px;
    .formly-buttons-wrapper {
        display: flex;
        align-items: flex-end;
    }
    .formly {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        width: 100%;
        max-height: none;
        justify-content: flex-start;
    }
    .form-group {
        margin-bottom: 0px !important;
    }
    .button-group {
        display: flex;
        align-items: flex-end;
    }
    .plus-button {
        height: 26px;
        margin: 0px !important;
    }
    .formly-field {
        width: 66% !important;
        margin-bottom: 0px !important;
    }
}
.filter-icon {
    cursor: pointer;
    margin: 5px;
    border-style: solid;
    border-color: white;
    border-width: 1.5px;
    &:hover {
        border-color: rgba(102, 102, 102, 0.4);
    }
    &:active {
        border-color: rgba(102, 102, 102, 0.4);
    }
}
.filter-active {
    color: $step-success;
}
.blue-border {
    border-color: rgba(102, 102, 102, 0.4);
}
/* ... */

